k8s/gcp-dr/03-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kli-backend
  namespace: kli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kli-backend
  template:
    metadata:
      labels:
        app: kli-backend
    spec:
      imagePullSecrets:
        - name: ghcr-login
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: kli-backend
          image: ghcr.io/dannut/klist-backend:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: kli-backend
  namespace: kli
spec:
  selector:
    app: kli-backend
  ports:
    - port: 8080
      targetPort: 8080
